--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,7 +1,7 @@
 
 <h1><%= @cocktail.name%></h1>
 
-<%= cl_image_tag("qodhdyt52fn4giemdzzb",
+<%= cl_image_tag("qodhdyt52fn4giemdzzb.jpg",
       width: 400, height: 300, crop: :fill) %>
 
 <ul>
