--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,9 @@
 <div class="navbar-wagon">
   <!-- Logo -->
   <a href="/" class="navbar-wagon-brand">
-    <%= image_tag "logo.png", alt: "Le Wagon", width: 150 %>
+<!--     <%= image_tag "logo.png", alt: "Le Wagon", width: 150 %>
+ -->    <%= cl_image_tag("qyq1cn03sp1ptsr7mhlc",
+      width: 50, crop: :fill) %>
   </a>
 
   <!-- Right Navigation -->
