--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,8 +1,26 @@
 <h1>My list of cocktails</h1>
 <% @cocktails.each do |cocktail| %>
-  <p><%= cocktail.name %> <%= link_to "Show", cocktail_path(cocktail) %> <%= link_to "(delete)", cocktail_path(cocktail),
-      method: :delete,
-      data: { confirm: "Are you sure?" } %></p>
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12 col-sm-4">
+        <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= cl_image_tag cocktail.photo, height: 300, width: 400, crop: :fill %>)">
+          <div class="card-category"><%= link_to "(delete)", cocktail_path(cocktail),
+              method: :delete,
+              data: { confirm: "Are you sure?" } %></div>
+          <div class="card-description">
+            <h2><%= cocktail.name %></h2>
+            <p><%= link_to "Show", cocktail_path(cocktail) %></p>
+          </div>
+          <img class="card-user" src="https://kitt.lewagon.com/placeholder/users/tgenaitay">
+        </div>
+      </div>
+    </div>
+  </div>
 <% end %>
 
 <%= link_to "Add a cocktail", new_cocktail_path %>
+
+
+
+
+<!-- REPRENDRE ICI -->
